--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -5,7 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Step
-        run: echo "Hello world"
+        run: |
+            echo "Hello world"
+            echo "Hello moon"
       - name: Last Step
         run: echo "Program end"
         
